# gemini_telnyx_agent

./: .gitignore  CLAUDE.md  README.md  env.example  gemini_telnyx_bridge.py  google_agents.md  pyproject.toml  setup_tenyx.py  simple_telnyx_recorder.py  telnyx.md  voice_agent.py
agent/: audio_devices.py  constants.py  gemini_agent_tools.py  gemini_agent_tools_mock.py  gemini_simple_agent.py  match_facility.py
handlers/: webhook_handler.py  websocket_handler.py
models/: call_session.py
services/: audio_service.py  telnyx_service.py
