[project]
name = "test-telnyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.4",
    "requests>=2.32.4",
    "telnyx>=2.1.5",
    "uvicorn>=0.35.0",
    "validators>=0.35.0",
    "websockets>=15.0.1",
]
