[project]
name = "test-telnyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.4",
    "requests>=2.32.4",
    "telnyx>=2.1.5",
    "uvicorn>=0.35.0",
    "validators>=0.35.0",
    "websockets>=15.0.1",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "google-genai>=0.6.0",
    "pyaudio>=0.2.11",
    "pydantic>=2.0.0",
    "soundfile>=0.13.1",
    "librosa>=0.11.0",
    "google-generativeai>=0.8.5",
    "pydub>=0.25.1",
    "gtts>=2.5.4",
    "aiohttp>=3.12.15",
    "aiofiles>=24.1.0",
]
